[project]
name = "diffute"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "albumentations>=2.0.5",
    "alps>=0.0.1",
    "datasets>=3.5.0",
    "diffusers>=0.32.2",
    "ftfy>=6.3.1",
    "jinja2>=3.1.6",
    "minio>=7.2.15",
    "tensorboard>=2.19.0",
    "torchvision>=0.21.0",
    "transformers>=4.50.3",
]
